--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -2,7 +2,8 @@
 .noUi-connect{
     background: rgba(101,188,0,1);
     opacity: .5;
-    height: 16px;
+    height: 30px;
+    margin-top: -8px;
 }
 .noUi-connect--new{
     border-top: 4px solid black;
@@ -39,9 +40,7 @@
     margin-left: 2px;
 }
 .slider--full{
-    margin-top: 16px;
-    position: absolute;
-    margin-left: 16px;
+    width: 103%!important;
 }
 .wrap-slider--full {
     padding-left: 0!important;
@@ -60,7 +59,7 @@
     color: #9098A9;
 }
 .col-wg--top:first-child, .col-wg--base:first-child{
-    border-left: none;
+
 }
 
 .main {
