~ bugfix: initialising slider, tabs, checkbox, etc. when adding a new matrix block (before was working only on reload)

--- a/templates/input.html
+++ b/templates/input.html
@@ -1,4 +1,4 @@
-<main class="main welance-grid">
+<main class="main welance-grid" onload="alert('wiii');">
 
     <label class="wg-tab-label-option">
         <button class="wg-layout-mode" type="button" value="1">📐</button>
@@ -31,7 +31,7 @@
                         </div>
                     </div>
 
-                    <div class="slider {{bpOpt}} col--12-12" data-from="0" data-to="12"></div>
+                    <div class="slider slider-not-created {{bpOpt}} col--12-12" data-from="0" data-to="12"></div>
                 </div>
             </div>
         </section>
