~ fixed default data for consistency with GUI + added twig extension to read the data stored in craft (serialized json) - removed layout mode (due to a craftCMS JS that continuously refreshes the DOM in preview mode making it impossible to modify it)

--- a/templates/input.html
+++ b/templates/input.html
@@ -1,8 +1,8 @@
 <main class="main welance-grid" onload="alert('wiii');">
 
-    <label class="wg-tab-label-option">
+    {#<label class="wg-tab-label-option">
         <button class="wg-layout-mode" type="button" value="1">📐</button>
-    </label>
+    </label>#}
 
     {% for bpOpt in breakpointOptions %}
         <label class="wg-tab-label {{bpOpt}}-check">{{bpOpt}} <small class="wg-{{bpOpt}}-offset">1</small><small class="wg-{{bpOpt}}-width">12</small></label>
