~ bugfix - hidden debugging textarea

--- a/templates/input.html
+++ b/templates/input.html
@@ -52,7 +52,7 @@
         </section>
     {% endfor %}
 
-    <textarea style="" rows="30" cols="150" class="wg-data" name="{{ name }}" placeholder="place holder here">{{ value }}</textarea>
+    <textarea style="display:none;" rows="30" cols="150" class="wg-data" name="{{ name }}" placeholder="place holder here">{{ value }}</textarea>
 
     <label class="wg-tab-label-option wg-tab-label-option--right">
         New Row
